--- a/slides.css
+++ b/slides.css
@@ -39,10 +39,13 @@ input {
   padding-left: 20px;
 }
 
+button {
+  height: 32px;
+}
+
 button#add_big_text {
-  height: 34px;
-  line-height: 0;
-  padding-top: 5px;
+  position: relative;
+  top: -0.25rem;
 }
 
 button#add_big_text span {
@@ -53,6 +56,23 @@ button#add_big_text span {
   margin-left: -1.2rem;
 }
 
+button#add_big_text:after {
+  content: "abc";
+  position: relative;
+  margin-top: -0.9rem;
+  margin-left: -0.25rem;
+  font-size: 1.5rem;
+  width: 0;
+  height: 0;
+  display: table-caption;
+}
+
 input#select_image {
   display: none;
+}
+
+.material-icons {
+  font-size: 2em;
+  margin: -1em;
+  vertical-align: middle;
 }
