move controls to bottom center, and add an animation

--- a/slides.css
+++ b/slides.css
@@ -92,10 +92,25 @@ input#select_image {
 #controls {
   text-align: center;
   padding: 0.5rem;
-  width: 30%;
-  min-width: 340px;
+  width: 340px;
   margin: auto;
-  box-shadow: 2px 2px 5px black;
+  position: fixed;
+  bottom: 1rem;
+  left: calc(50% - 340px / 2 - 0.5rem / 2);
+  box-shadow: 0 1px 5px black;
+  animation: jump-a-little 0.25s ease 1s forwards;
+}
+
+@keyframes jump-a-little {
+  0% {
+    bottom: 1rem;
+  }
+  50% {
+    bottom: 2rem;
+  }
+  100% {
+    bottom: 1rem;
+  }
 }
 
 @keyframes hey-notice-this {
