save + reuse slides data (json): fix #2 (must "upload")

--- a/slides.css
+++ b/slides.css
@@ -77,7 +77,8 @@ button#add_big_text:after {
   display: table-caption;
 }
 
-input#select_image {
+input#select_image,
+input#select_json_file {
   display: none;
 }
 
@@ -92,11 +93,11 @@ input#select_image {
 #controls {
   text-align: center;
   padding: 0.5rem;
-  width: 400px;
+  width: 500px;
   margin: auto;
   position: fixed;
   bottom: 1rem;
-  left: calc(50% - 400px / 2 - 0.5rem / 2);
+  left: calc(50% - 500px / 2 - 0.5rem / 2);
   box-shadow: 0 1px 5px black;
   animation: jump-a-little 0.25s ease 1s forwards;
 }
