--- a/slides.css
+++ b/slides.css
@@ -111,3 +111,11 @@ p {
   color: white;
   mix-blend-mode: difference;
 }
+
+.hide-on-first-load {
+  visibility: hidden;
+  width: 0;
+  height: 0;
+  margin: 0;
+  padding: 0;
+}
