--- a/slides.css
+++ b/slides.css
@@ -196,6 +196,15 @@ button#delete:hover + span:before {
   white-space: nowrap;
 }
 
+#laser {
+  position: absolute;
+  box-shadow: 0 0 50px 50px rgba(0, 0, 0, 0.1);
+  transition: 0s !important;
+  background: red;
+  width: 10px;
+  height: 10px;
+}
+
 @media only screen and (max-width: 600px) {
   #controls {
     display: flex;
@@ -222,5 +231,9 @@ button#delete:hover + span:before {
 
   :hover + span:before {
     top: 1rem;
+  }
+
+  #laser {
+    display: none;
   }
 }
