--- a/slides.css
+++ b/slides.css
@@ -201,6 +201,8 @@ button#delete:hover + span:before {
   background: red;
   width: 10px;
   height: 10px;
+  left: -20px;
+  top: -20px;
 }
 
 @media only screen and (max-width: 600px) {
