fix #28: scale based on original screen size

--- a/slides.css
+++ b/slides.css
@@ -88,6 +88,7 @@ input#select_json_file {
   position: fixed;
   bottom: 1rem;
   left: calc(50% - 550px / 2 - 0.5rem / 2);
+  z-index: 1;
   box-shadow: 0 1px 5px black;
   animation: jump-a-little 0.25s ease 1s forwards;
 }
