minify better, modularized, and preserve license comments

--- a/other-css/material-icons.css
+++ b/other-css/material-icons.css
@@ -1,4 +1,4 @@
-/* LICENSE: https://github.com/google/material-design-icons/blob/master/LICENSE */
+/*! LICENSE: https://github.com/google/material-design-icons/blob/master/LICENSE */
 
 /* fallback */
 @font-face {
